--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -59,3 +59,6 @@ jobs:
         content_type: text/html
         body: ${{ steps.generate.outputs.body }}
         attachments: README.md
+- name: Read README.md as body
+  id: generate
+  run: echo "body<<EOF" >> $GITHUB_OUTPUT && cat README.md >> $GITHUB_OUTPUT && echo "EOF" >> $GITHUB_OUTPUT
