--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -29,7 +29,7 @@ jobs:
         git config --global user.email "${{ vars.EMAIL }}"
         git config --global user.name "${{ vars.NAME }}"
         git add .
-        git commit -m "update"
+        git commit -m "update" || echo "nothing to commit"
     - name: Push changes
       uses: ad-m/github-push-action@master
       with:
@@ -40,18 +40,16 @@ jobs:
         echo "body<<EOF" >> $GITHUB_OUTPUT
         cat README.md >> $GITHUB_OUTPUT
         echo "EOF" >> $GITHUB_OUTPUT
-
-   - name: Send email with arXiv math papers
-  uses: dawidd6/action-send-mail@v3
-  with:
-    server_address: ${{ secrets.MAIL_SERVER }}
-    server_port: ${{ secrets.MAIL_PORT }}
-    username: ${{ secrets.MAIL_USERNAME }}
-    password: ${{ secrets.MAIL_PASSWORD }}
-    subject: "arXiv 数学论文每日摘要"
-    to: ${{ secrets.MAIL_TO }}
-    from: ${{ secrets.MAIL_USERNAME }}
-    body: ${{ steps.generate.outputs.body }}
-    attachments: README.md
-
+    - name: Send email with arXiv math papers
+      uses: dawidd6/action-send-mail@v3
+      with:
+        server_address: ${{ secrets.MAIL_SERVER }}
+        server_port: ${{ secrets.MAIL_PORT }}
+        username: ${{ secrets.MAIL_USERNAME }}
+        password: ${{ secrets.MAIL_PASSWORD }}
+        subject: "arXiv 数学论文每日摘要"
+        to: ${{ secrets.MAIL_TO }}
+        from: ${{ secrets.MAIL_USERNAME }}
+        body: ${{ steps.generate.outputs.body }}
+        attachments: README.md
 
