--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -40,16 +40,17 @@ jobs:
         echo "body<<EOF" >> $GITHUB_OUTPUT
         cat README.md >> $GITHUB_OUTPUT
         echo "EOF" >> $GITHUB_OUTPUT
-    - name: Send email with arXiv math papers
+      - name: Send email with arXiv math papers
       uses: dawidd6/action-send-mail@v3
       with:
-        server_address: ${{ secrets.MAIL_SERVER }}
-        server_port: ${{ secrets.MAIL_PORT }}
-        username: ${{ secrets.MAIL_USERNAME }}
-        password: ${{ secrets.MAIL_PASSWORD }}
+        server_address: ${{ vars.MAIL_SERVER }}
+        server_port: ${{ vars.MAIL_PORT }}
+        username: ${{ vars.MAIL_USERNAME }}
+        password: ${{ vars.MAIL_PASSWORD }}
         subject: "arXiv 数学论文每日摘要"
-        to: ${{ secrets.MAIL_TO }}
-        from: ${{ secrets.MAIL_USERNAME }}
+        to: ${{ vars.MAIL_TO }}
+        from: ${{ vars.MAIL_USERNAME }}
         body: ${{ steps.generate.outputs.body }}
         attachments: README.md
+
 
