--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -40,7 +40,15 @@ jobs:
         echo "body<<EOF" >> $GITHUB_OUTPUT
         cat README.md >> $GITHUB_OUTPUT
         echo "EOF" >> $GITHUB_OUTPUT
-    - name: Send email with README.md content
+    - name: Prepare daily digest email body
+      id: digest
+      run: |
+        TODAY=$(date +'%Y-%m-%d')
+        echo "body<<EOF" >> $GITHUB_OUTPUT
+        cat data/$TODAY.md >> $GITHUB_OUTPUT
+        echo "EOF" >> $GITHUB_OUTPUT
+
+    - name: Send email with arXiv math papers
       uses: dawidd6/action-send-mail@v3
       with:
         server_address: ${{ vars.MAIL_SERVER }}
@@ -50,5 +58,7 @@ jobs:
         subject: "arXiv 数学论文每日摘要"
         to: ${{ vars.MAIL_TO }}
         from: ${{ vars.MAIL_USERNAME }}
-        body: file://README.md
+        body: ${{ steps.digest.outputs.body }}
+
+
 
